--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  dbt_fundamentals_on_demand:
+  jaffle_shop:
     staging:
       +materialized: view
       
