--- a/models/Staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/Staging/jaffle_shop/_src_jaffle_shop.yml
@@ -2,10 +2,16 @@ sources:
   - name: jaffle_shop
     database: raw  
     schema: jaffle_shop  
+    config:
+          freshness:
+            warn_after:
+              count: 1
+              period: day
+            error_after:
+              count: 2
+              period: day
+          loaded_at_field: _etl_loaded_at    
     tables:
-      - name: orders
       - name: customers
-
-  - name: stripe
-    tables:
-      - name: payments
+        freshness: null
+      - name: orders
