--- a/models/Staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/Staging/jaffle_shop/_src_jaffle_shop.yml
@@ -1,17 +1,8 @@
+version: 2
+
 sources:
   - name: jaffle_shop
-    database: raw  
-    schema: jaffle_shop  
-    config:
-          freshness:
-            warn_after:
-              count: 1
-              period: day
-            error_after:
-              count: 2
-              period: day
-          loaded_at_field: _etl_loaded_at    
+    database: raw
     tables:
       - name: customers
-        freshness: null
       - name: orders
