Added documentation to the stg_stripe__payment model.

--- a/models/staging/jaffle_shop/__stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/__stg_jaffle_shop.yml
@@ -28,6 +28,7 @@ models:
                 - placed
                 - return_pending
       - name: customer_id
+        description: Foreign key to stg_customers.customer_id
         data_tests:
           - relationships:
               field: customer_id
