--- a/models/staging/stripe/__stg_stripe.yml
+++ b/models/staging/stripe/__stg_stripe.yml
@@ -21,11 +21,15 @@ models:
               - credit_card
               - gift_card
               - coupon
-              - bank_transfer     
-
+              - bank_transfer 
       - name: payment_status
         data_tests:
-          - fail
-          - success    
+        - accepted_values:
+            values: 
+              - fail
+              - success
+         
+
+ 
      
        
